--- a/templates/restaurant-register.html
+++ b/templates/restaurant-register.html
@@ -16,8 +16,8 @@
         Restaurant Registration
       </h2>
       <h4 id="current">
-        Complete the form below to register and start saving the 
-        planet, one Happy Happy Hour offer at a time!
+        Register below to start saving the planet— 
+        one Happy Happy Hour offer at a time!
       </h4>
     </div>
   </div>
@@ -101,7 +101,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Register Now</button>
       </form>
-      <p>Already registered?
+      <p class="mt-3 mb-5">Already registered?
       <a href="/restaurant">Click here to log in.</a></p>
     </div>
   </div>
