Fixed formatting issues.

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,9 @@
     </div>
   </nav>
 
-  <div id="content">
+  <main>
     {% block content %}{% endblock %}
-  </div>
+  </main>
   {% block script %}{% endblock %}
 </body>
 </html>
