--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -34,7 +34,7 @@
           <button type="submit" class="btn btn-primary btn-block">Search</button>
         </div>
       </form>
-      <form id="filter" action="/map">
+      <form id="filter" action="/">
         <div class="form-group">
           <label for="name">Restaurant Name:</label>
           <input type="text" name="name" class="form-control form-filter">
